docs(methods): generate and transform method

--- a/docs/003.Methods.md
+++ b/docs/003.Methods.md
@@ -1,7 +1,277 @@
 # Methods
 
+## 介绍MethodVisitor
+
+The ASM API for generating and transforming compiled methods is based on the `MethodVisitor` abstract, which is returned by the `ClassVisitor`’s `visitMethod` method. In addition to **some methods related to annotations and debug information**, this class defines one method per bytecode instruction category, based on the number and type of arguments of these instructions. These methods must be called in the following order (with some additional constraints specified in the Javadoc of the MethodVisitor interface)
+
+这段理解：
+
+- （1） 引出MethodVisitor类
+- （2） 在MethodVisitor类中，分为两种类型的方法，一种是与annotation和debug相关的方法，另一种是与bytecode相关的方法。
+- （3） 在调用方法的时候，调用的“顺序”是非常重要的。
+
+```txt
+visitAnnotationDefault?
+( visitAnnotation | visitParameterAnnotation | visitAttribute )*
+( visitCode
+( visitTryCatchBlock | visitLabel | visitFrame | visitXxx Insn |
+visitLocalVariable | visitLineNumber )*
+visitMaxs )?
+visitEnd
+```
+
+This means that **annotations** and **attributes**, if any, must be visited first, followed by the **method’s bytecode**, for non abstract methods. For these methods **the code must be visited in sequential order**, between exactly one call to `visitCode` and exactly one call to `visitMaxs`.
+
+这段理解：
+
+- （1） annotation和attributes的方法，需要先被visit
+- （2） 与bytecode相关的方法，必须按sequential order进行访问，其中visitCode和vistMaxs都只访问一次
+
+The `visitCode` and `visitMaxs` methods can therefore be used to detect the start and end of the method’s bytecode in a sequence of events. Like for classes, the `visitEnd` method must be called last, and is used to detect the end of a method in a sequence of events.
+
+The `ClassVisitor` and `MethodVisitor` classes can be combined in order to generate complete classes:
+
+```java
+ClassVisitor cv = ...;
+cv.visit(...);
+
+MethodVisitor mv1 = cv.visitMethod(..., "m1", ...);
+mv1.visitCode();
+mv1.visitInsn(...);
+...
+mv1.visitMaxs(...);
+mv1.visitEnd();
+
+MethodVisitor mv2 = cv.visitMethod(..., "m2", ...);
+mv2.visitCode();
+mv2.visitInsn(...);
+...
+mv2.visitMaxs(...);
+mv2.visitEnd();
+
+cv.visitEnd();
+```
+
 ASM provides **three core components** based on the `MethodVisitor` API to generate(从无到有的生成新的) and transform(修改已有的) methods:
 
 - The `ClassReader` class parses the content of compiled methods and calls the corresponding methods on the `MethodVisitor` objects returned by the `ClassVisitor` passed as argument to its `accept` method.
 - The `ClassWriter`’s `visitMethod` method returns an implementation of the `MethodVisitor` interface that builds compiled methods directly in binary form.
 - The `MethodVisitor` class delegates all the method calls it receives to another `MethodVisitor` instance. It can be seen as an event filter.
+
+## 介绍ClassWriter options
+
+Computing **the stack map frames** for a method is not very easy: you have to compute all the frames, find the frames that correspond to jump targets or that follow unconditional jumps, and finally compress these remaining frames. Likewise, computing **the size of the local variables and operand stack** parts for a method is easier but still not very easy.
+
+Hopefully ASM can compute this for you. When you create a `ClassWriter` you can specify what must be automatically computed:
+
+- with `new ClassWriter(0)` nothing is automatically computed. You have to compute yourself the frames and the local variables and operand stack sizes.
+- with `new ClassWriter(ClassWriter.COMPUTE_MAXS)` the sizes of the local variables and operand stack parts are computed for you. You must still call `visitMaxs`, but you can use any arguments: they will be ignored and recomputed. With this option you still have to compute the frames yourself.
+- with `new ClassWriter(ClassWriter.COMPUTE_FRAMES)` everything is computed automatically. You don’t have to call `visitFrame`, but you must still call `visitMaxs` (arguments will be ignored and recomputed).
+
+Using these options is convenient but this has a cost: the `COMPUTE_MAXS` option makes a `ClassWriter` 10% slower, and using the `COMPUTE_FRAMES` option makes it two times slower. This must be compared to the time it would take to compute this yourself: in specific situations there are often easier and faster algorithms for computing this, compared to the algorithm used in ASM, which must handle all cases.
+
+Note that if you choose to compute the frames yourself, you can let the `ClassWriter` class do **the compression step** for you. For this you just have to visit your uncompressed frames with `visitFrame(F_NEW, nLocals, locals, nStack, stack)`, where `nLocals` and `nStack` are the number of `locals` and the operand stack size, and `locals` and `stack` are arrays containing the corresponding types.
+
+Note also that, in order to compute frames automatically, it is sometimes necessary to compute **the common super class of two given classes**. By default the `ClassWriter` class computes this, in the `getCommonSuperClass` method, by loading the two classes into the JVM and by using the reflection API. This can be a problem if you are generating several classes that reference each other, because the referenced classes may not yet exist. In this case you can override the `getCommonSuperClass` method to solve this problem.
+
+这段理解： 对于getCommonSuperClass的问题，我之前在看bcel的时候，遇到过相似的方法，但却还是不明白，它究竟解决什么的问题。
+
+## Generating methods
+
+```java
+package pkg;
+
+public class Bean {
+    private int f;
+
+    public int getF() {
+        return this.f;
+    }
+
+    public void setF(int f) {
+        this.f = f;
+    }
+}
+```
+
+The bytecode of the `getF` method can be generated with the following method calls, if `mv` is a `MethodVisitor`:
+
+```java
+mv.visitCode();
+mv.visitVarInsn(ALOAD, 0);
+mv.visitFieldInsn(GETFIELD, "pkg/Bean", "f", "I");
+mv.visitInsn(IRETURN);
+mv.visitMaxs(1, 1);
+mv.visitEnd();
+```
+
+The first call(`visitCode`) starts the bytecode generation. It is followed by three calls that generate the three instructions of this method. The call to `visitMaxs` must be done after all the instructions have been visited. It is used to define the sizes of the local variables and operand stack parts for the execution frame of this method. Finally the last call(`visitEnd`) is used to end the generation of the method.
+
+```java
+public void checkAndSetF(int f) {
+    if (f >= 0) {
+        this.f = f;
+    } else {
+        throw new IllegalArgumentException();
+    }
+}
+```
+
+The bytecode of the `setF` method and of the constructor can be generated in a similar way. A more interesting example is the `checkAndSetF` method:
+
+```java
+mv.visitCode();
+mv.visitVarInsn(ILOAD, 1);
+
+Label label = new Label();
+mv.visitJumpInsn(IFLT, label);
+
+mv.visitVarInsn(ALOAD, 0);
+mv.visitVarInsn(ILOAD, 1);
+mv.visitFieldInsn(PUTFIELD, "pkg/Bean", "f", "I");
+
+Label end = new Label();
+mv.visitJumpInsn(GOTO, end);
+
+mv.visitLabel(label);
+mv.visitFrame(F_SAME, 0, null, 0, null);
+
+mv.visitTypeInsn(NEW, "java/lang/IllegalArgumentException");
+mv.visitInsn(DUP);
+mv.visitMethodInsn(INVOKESPECIAL, "java/lang/IllegalArgumentException", "<init>", "()V");
+mv.visitInsn(ATHROW);
+
+mv.visitLabel(end);
+mv.visitFrame(F_SAME, 0, null, 0, null);
+
+mv.visitInsn(RETURN);
+mv.visitMaxs(2, 2);
+mv.visitEnd();
+```
+
+Note: a `Label` object designates the instruction that follows the `visitLabel` call for this label. For example `end` designates the `RETURN` instruction, and not the `frame` that is visited just after, since this is not an instruction. It is perfectly legal to have several labels designating the same instruction, but a `label` must designate exactly one instruction. In other words it is possible to have successive calls to `visitLabel` with different labels, but a `label` used in an instruction must be visited exactly once with `visitLabel`. A last constraint is that labels can not be shared: each method must have its own labels.
+
+## Transforming methods
+
+You should now have guessed that methods can be transformed like classes, i.e. by using a **method adapter**(下面我写了注释) that forwards the method calls it receives with some modifications: (1)changing arguments can be used to change individual instructions, (2)not forwarding a received call removes an instruction, and (3)inserting calls between the received ones adds new instructions. The `MethodVisitor` class provides a basic implementation of such a method adapter, which does nothing else than just forwarding all the method calls it receives.
+
+这段理解：
+
+- （1） adapter = an object that allows you to connect two pieces of equipment of different types or sizes 想像一下两个不同的粗细的水管，将两个水管进行连接的部分就是adapter。那么，所谓的method adapter就需要一定的想像力：把method内的opcode instruction想像成一滴一滴的水，这些opcode instruction就像一滴滴水一样流过水管（MethodVisitor），不同大小的水管（MethodVisitor）之间可以进行连接，而进行连接的地方就是Method Adapter。
+- （2） 接着讲了method adapter的三种作用：修改、舍弃和添加
+
+In order to understand how method adapters can be used, let’s consider a very simple adapter that removes the `NOP` instructions inside methods (they can be removed without problems since they do nothing):
+
+## Stateless transformations
+
+The transformation is local and does not depend on the instructions that have been visited before the current one: the code added at the beginning is always the same and is always added, and likewise for the code inserted before each `RETURN` instruction. Such transformations are called **stateless transformations**. They are simple to implement but only the simplest transformations verify this property.
+
+```java
+import static org.objectweb.asm.Opcodes.*;
+
+import org.objectweb.asm.ClassVisitor;
+import org.objectweb.asm.FieldVisitor;
+import org.objectweb.asm.MethodVisitor;
+
+
+public class AddTimerClassAdapter extends ClassVisitor {
+    private String owner;
+    private boolean isInterface;
+
+    public AddTimerClassAdapter(ClassVisitor classVisitor) {
+        super(ASM4, classVisitor);
+    }
+
+    @Override
+    public void visit(int version, int access, String name, String signature, String superName, String[] interfaces) {
+        cv.visit(version, access, name, signature, superName, interfaces);
+        owner = name;
+        isInterface = (access & ACC_INTERFACE) != 0;
+    }
+
+    @Override
+    public MethodVisitor visitMethod(int access, String name, String descriptor, String signature, String[] exceptions) {
+        MethodVisitor mv = cv.visitMethod(access, name, descriptor, signature, exceptions);
+        if (!isInterface && mv != null && !name.equals("<init>")) {
+            mv = new AddTimeMethodAdapter(mv);
+        }
+        return mv;
+    }
+
+    @Override
+    public void visitEnd() {
+        if (!isInterface) {
+            FieldVisitor fv = cv.visitField(ACC_PUBLIC | ACC_STATIC, "timer", "J", null, null);
+            if (fv != null) {
+                fv.visitEnd();
+            }
+        }
+        cv.visitEnd();
+    }
+
+    class AddTimeMethodAdapter extends MethodVisitor {
+
+        public AddTimeMethodAdapter(MethodVisitor methodVisitor) {
+            super(ASM4, methodVisitor);
+        }
+
+        @Override
+        public void visitCode() {
+            mv.visitCode();
+            mv.visitFieldInsn(GETSTATIC, owner, "timer", "J");
+            mv.visitMethodInsn(INVOKESTATIC, "java/lang/System", "currentTimeMillis", "()J", false);
+            mv.visitInsn(LSUB);
+            mv.visitFieldInsn(PUTSTATIC, owner, "timer", "J");
+        }
+
+        @Override
+        public void visitInsn(int opcode) {
+            if ((opcode >= IRETURN && opcode <= RETURN) || opcode == ATHROW) {
+                mv.visitFieldInsn(GETSTATIC, owner, "timer", "J");
+                mv.visitMethodInsn(INVOKESTATIC, "java/lang/System", "currentTimeMillis", "()J", false);
+                mv.visitInsn(LADD);
+                mv.visitFieldInsn(PUTSTATIC, owner, "timer", "J");
+            }
+            mv.visitInsn(opcode);
+        }
+
+        @Override
+        public void visitMaxs(int maxStack, int maxLocals) {
+            mv.visitMaxs(maxStack + 4, maxLocals);
+        }
+    }
+}
+```
+
+## Statefull transformations
+
+More complex transformations require memorizing some state about the instructions that have been visited before the current one. Consider for example a transformation that removes all occurrences of the `ICONST_0 IADD` sequence, whose empty effect is to add `0`. It is clear that when an `IADD` instruction is visited, it must be removed only if the last visited instruction was an `ICONST_0`. This requires storing state inside the method adapter. For this reason such transformations are called **statefull transformations**.
+
+Let’s look in more details at this example. When an `ICONST_0` is visited, it must be removed only if the next instruction is an `IADD`. The problem is that the next instruction is not yet known. The solution is to postpone this decision to the next instruction: if it is an `IADD` then remove both instructions, otherwise emit the `ICONST_0` and the current instruction.
+
+## Tools
+
+The `org.objectweb.asm.commons` package contains **some predefined method adapters** that can be useful to define your own adapters. This section presents **three of them** and shows how they can be used with the `AddTimerAdapter` example. It also shows how the tools seen in the previous chapter can be used to ease method generation or transformation.
+
+### Basic tools
+
+Many bytecode instructions, such as xLOAD, xADD or xRETURN, depend on the type to which they are applied. The `Type` class provides a `getOpcode` method that can be used to get, for these instructions, the opcode corresponding to **a given type**. This method takes as parameter an `opcode` for the `int` type, and returns the `opcode` for the type on which it is called. For instance `t.getOpcode(IMUL)` returns `FMUL` if `t` is equal to `Type.FLOAT_TYPE`.
+
+### AnalyzerAdapter
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
